--- a/TcsInsurance/TinkoffService/Web.config
+++ b/TcsInsurance/TinkoffService/Web.config
@@ -3,6 +3,9 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+			<section name="TinkoffService.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		</sectionGroup>
 	</configSections>
 	<appSettings>
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
@@ -25,12 +28,10 @@
 					</security>
 				</binding>
 				<binding name="WSPortBinding1"/>
-				<binding name="DailyInfoSoap"/>
 			</basicHttpBinding>
 		</bindings>
 		<client>
 			<endpoint address="https://msk01-lfeapp03:8181/ws.udsj/WSService" binding="basicHttpBinding" bindingConfiguration="WSPortBinding" contract="TikerHistoryServiceReference.WS" name="WSPort"/>
-			<endpoint address="http://www.cbr.ru/DailyInfoWebServ/DailyInfo.asmx" binding="basicHttpBinding" bindingConfiguration="DailyInfoSoap" contract="CbrServiceReference.DailyInfoSoap" name="DailyInfoSoap"/>
 		</client>
 		<behaviors>
 			<serviceBehaviors>
@@ -73,4 +74,11 @@
 	<connectionStrings>
 		<add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
+	<applicationSettings>
+		<TinkoffService.Properties.Settings>
+			<setting name="TinkoffService_CbrServiceReference_DailyInfo" serializeAs="String">
+				<value>http://www.cbr.ru/DailyInfoWebServ/DailyInfo.asmx</value>
+			</setting>
+		</TinkoffService.Properties.Settings>
+	</applicationSettings>
 </configuration>
