--- a/TcsInsurance/VirtuClient/VirtuClient.csproj
+++ b/TcsInsurance/VirtuClient/VirtuClient.csproj
@@ -72,5 +72,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{2a649c58-9b9b-41dc-8e7b-721b692228e8}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
