--- a/TcsInsurance/TinkoffClient/TinkoffClient.csproj
+++ b/TcsInsurance/TinkoffClient/TinkoffClient.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DispatchByBodyBehaviorAttribute.cs" />
     <Compile Include="DispatchByBodyOperationSelector.cs" />
     <Compile Include="Models\Models.cs" />
+    <Compile Include="Models\ServiceException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinkoffClient.cs" />
   </ItemGroup>
