* change prod to test

--- a/TcsInsurance/TinkoffService/Web.Release.config
+++ b/TcsInsurance/TinkoffService/Web.Release.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-    <connectionStrings>
+    <!--<connectionStrings>
         <add name="Model" connectionString="data source=MSK01-LIFEWS01;initial catalog=TinkoffUralsibLife;integrated security=False;User Id=tinkoff;Password=end836hfn;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
     <appSettings>
@@ -8,5 +8,5 @@
     </appSettings>
     <system.web>
         <compilation xdt:Transform="RemoveAttributes(debug)" />
-    </system.web>
+    </system.web>-->
 </configuration>
